--- a/app/views/computers/_list.html.erb
+++ b/app/views/computers/_list.html.erb
@@ -1,35 +1,36 @@
-<table>
-  <tr>
-    <th>Pc</th>
-    <th>Mac</th>
-    <th>Ip</th>
-    <th><%= t 'computers.available' %></th>
-    <th>MBoard</th>
-    <th><%= t 'computers.harddisk' %></th>
-    <th><%= t 'computers.memory' %></th>
-    <th>Cd</th>
-    <th>Dvd</th>
-    <th><%= t 'computers.place' %></th>
-    <th><%= t 'computers.workstation?' %></th>
-    <th colspan='3'><%= t 'common-actions.actions' %></th>
-  </tr>
-<% for computer in @computers %>
-  <tr  class="<%= cycle("rowA","rowB") %>">
-    <td><%= computer.name %></td>
-    <td><%= computer.mac %></td>
-    <td><%= computer.ip %></td>
-    <td><%= computer.available %></td>
-    <td><%= computer.mother_board.title rescue nil %></td>
-    <td><%= computer.harddisk.collect {|x| x.model + '<br>' } rescue nil %></td>
-    <td><%= computer.memory.collect {|x| x.model + '<br>' } rescue nil %></td>
-    <td><%= computer.cd.collect {|x| x.model + '<br>' } rescue nil %></td>
-    <td><%= computer.dvd.collect {|x| x.model + '<br>' } rescue nil %></td>
-    <td><%= computer.place.title rescue nil %></td>
-    <td><%= computer.is_part_of_a_workstation rescue nil %></td>
-    <td><%= link_to t('common-actions.show') , computer %></td>
-    <td><%= link_to t('common-actions.edit') , edit_computer_path(computer) %></td>
-    <td><%= link_to t('common-actions.destroy') , computer, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
+<div>
+  <table>
+    <tr>
+      <th>Pc</th>
+      <th>Mac</th>
+      <th>Ip</th>
+      <th><%= t 'computers.available' %></th>
+      <th>MBoard</th>
+      <th><%= t 'computers.harddisk' %></th>
+      <th><%= t 'computers.memory' %></th>
+      <th>Cd</th>
+      <th>Dvd</th>
+      <th><%= t 'computers.place' %></th>
+      <th><%= t 'computers.workstation?' %></th>
+      <th colspan='3'><%= t 'common-actions.actions' %></th>
+    </tr>
+    <% for computer in @computers %>
+    <tr  class="<%= cycle("rowA","rowB") %>">
+      <td><%= computer.name %></td>
+      <td><%= computer.mac %></td>
+      <td><%= computer.ip %></td>
+      <td><%= computer.available %></td>
+      <td><%= computer.mother_board.title rescue nil %></td>
+      <td><%= computer.harddisk.collect {|x| x.model + '<br>' } rescue nil %></td>
+      <td><%= computer.memory.collect {|x| x.model + '<br>' } rescue nil %></td>
+      <td><%= computer.cd.collect {|x| x.model + '<br>' } rescue nil %></td>
+      <td><%= computer.dvd.collect {|x| x.model + '<br>' } rescue nil %></td>
+      <td><%= computer.place.title rescue nil %></td>
+      <td><%= computer.is_part_of_a_workstation rescue nil %></td>
+      <td><%= link_to t('common-actions.show') , computer %></td>
+      <td><%= link_to t('common-actions.edit') , edit_computer_path(computer) %></td>
+      <td><%= link_to t('common-actions.destroy') , computer, :confirm => 'Are you sure?', :method => :delete %></td>
+    </tr>
+    <% end %>
+  </table>
 
