--- a/app/views/places/_list.html.erb
+++ b/app/views/places/_list.html.erb
@@ -8,6 +8,8 @@
         <th><%= t('places.name') %></th>
         <th><%= t('places.description') %></th>
         <th><%= t('places.computer') %></th>
+        <th><%= t('places.screen') %></th>
+        <th><%= t('places.printer') %></th>
         <th colspan='3'><%= t('common-actions.actions') %></th>
       </tr>
       <% for place in @places %>
@@ -15,6 +17,8 @@
         <td><%= link_to place.title, place %></td>
         <td><%= place.description %></td>
         <td><%= place.computer.count %></td>
+        <td><%= place.screen.count %></td>
+        <td><%= place.printer.count %></td>
         <td><%= link_to t('common-actions.show'), place %></td>
         <td><%= link_to t('common-actions.edit'), edit_place_path(place) %></td>
         <td><%= link_to t('common-actions.destroy'), place, :confirm => 'Are you sure?', :method => :delete %></td>
