- Partials   * added new partial for link to top the document   * little changes adding translations
- Views
  * little changes adding translations

- Locales
  * adding translation

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -40,4 +40,7 @@
 <%  end %>
 
 <%= link_to t('places.edit'), edit_place_path(@place) %> |
-<%= link_to t('places.back'), places_path %>
+<%= link_to t('places.back'), places_path %> |
+<a href='#' onclick='effect.ScrollTo('article_top'); return false;'> <%= t('common-actions.top-page') %></a>
+
+
