--- a/app/views/shared/_new_menu.html.erb
+++ b/app/views/shared/_new_menu.html.erb
@@ -44,6 +44,7 @@
               <li><a href="/computers"  class="fly"><%= t 'menu.list-computers' %></a>
               <li><a href="/computers/available"><%= t 'menu.availables-computers' %></a></li>
               <li><a href="/computers/unavailable"><%= t 'menu.unavailables-computers' %></a></li>
+              <li><a href="/computers/stats"><%= t 'menu.stats-computers' %></a></li>
               <li><a href="/computers/new"><%= t 'menu.new-computer' %></a></li>
             </ul>
           </li>
