- Partials   * renamed partial menu
- Layout
  * little changes

--- a/app/views/layouts/places.html.erb
+++ b/app/views/layouts/places.html.erb
@@ -6,7 +6,7 @@
   <body>
     <div id="outer">
 
-        <%= render :partial => 'shared/new_menu' %>
+        <%= render :partial => 'shared/menu' %>
 
       <div id="content">
 
