--- a/app/views/layouts/workstations.html.erb
+++ b/app/views/layouts/workstations.html.erb
@@ -8,7 +8,7 @@
         <br>
       <% end %>
 
-      <%= render :partial => 'shared/new_menu' %>
+      <%= render :partial => 'shared/menu' %>
 
       <div id="content">
           <%= yield  %>
