--- a/app/views/layouts/harddisks.html.erb
+++ b/app/views/layouts/harddisks.html.erb
@@ -4,7 +4,7 @@
   <body>
     <div id="outer">
 
-        <%= render :partial => 'shared/new_menu' %>
+        <%= render :partial => 'shared/menu' %>
 
       <div id="content">
 
