- Javascript   * added library scriptaculous
- Controllers
  * little changes

- Shared Partials
  * added call to javascripts library

--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -7,5 +7,8 @@
   <link href="default.css" rel="stylesheet" type="text/css" />
   <%= stylesheet_link_tag 'scaffold' %>
   <%= stylesheet_link_tag 'default' %>
+
+  <%= javascript_include_tag('prototype') %>
+  <%= javascript_include_tag('scriptaculous/src/scriptaculous') %>
 </head>
 <% end %>
