--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,6 +1,8 @@
 <h2><%= @text %></h2>
 
-<div>
+<a href="#" onclick="Effect.toggle('x', 'appear'); return false;">
+Mostrar/ocultar computadoras</a>
+<div id="x">
 <%= t('phrases.list_of') + ' ' + t('places.computer') %>
 <% if not @computers.empty? %>
 <%= render :partial => 'computers/list' %>
@@ -9,11 +11,14 @@
 <% end %>
 </div>
 
+
 <% 2.times do %>
 <br>
 <%  end %>
 
-<div>
+<a href="#" onclick="Effect.toggle('screens', 'appear'); return false;">
+Mostrar/ocultar monitores</a>
+<div id="screens">
 <%= t('phrases.list_of') + ' ' + t('places.screen') %>
 <% if not @screens.empty? %>
 <%= render :partial => 'screens/list' %>
@@ -26,7 +31,9 @@
 <br>
 <%  end %>
 
-<div>
+<a href="#" onclick="Effect.toggle('printers', 'appear'); return false;">
+Mostrar/ocultar impresoras</a>
+<div id="printers">
 <%= t('phrases.list_of') + ' ' + t('places.printer') %>
 <% if not @printers.empty? %>
 <%= render :partial => 'printers/list' %>
@@ -42,5 +49,3 @@
 <%= link_to t('places.edit'), edit_place_path(@place) %> |
 <%= link_to t('places.back'), places_path %> |
 <a href='#' onclick='effect.ScrollTo('article_top'); return false;'> <%= t('common-actions.top-page') %></a>
-
-
