- Controller   * change layout to use
- Partial and View
  * add call to translate

--- a/app/views/marks/_form.html.erb
+++ b/app/views/marks/_form.html.erb
@@ -5,7 +5,7 @@
   <%= f.text_field :name %>
   <p>
     <% if action_name == 'new' %>
-    <%= f.submit t('marks.create') %>
+    <%= f.submit t('marks.new') %>
     <% else %>
     <%= f.submit t('marks.edit') %>
     <% end %>
