- Partials   * added translation
- Locales
  * added more translation

--- a/app/views/printers/_list.html.erb
+++ b/app/views/printers/_list.html.erb
@@ -4,7 +4,7 @@
     <th><%= t('printers.sn') %></th>
     <th><%= t('printers.mark') %></th>
     <th>Place</th>
-    <th>In workstation</th>
+    <th><%= t('printers.workstation?') %></th>
     <th colspan='3'><%= t('common-actions.actions') %></th>
   </tr>
 <% for printer in @printers %>
