--- a/app/views/screens/_list.html.erb
+++ b/app/views/screens/_list.html.erb
@@ -4,7 +4,7 @@
     <th><%= t('screens.sn') %></th>
     <th><%= t('screens.mark') %></th>
     <th>Place</th>
-    <th>In workstation</th>
+    <th><%= t('screens.workstation?') %></th>
     <th colspan='3'><%= t('common-actions.actions') %></th>
   </tr>
 <% for screen in @screens %>
