- Layout   * added translation tag
- Partial
  * added translation tag

--- a/app/views/layouts/places.html.erb
+++ b/app/views/layouts/places.html.erb
@@ -39,7 +39,7 @@
         <br>
         <br>
         <a href="#" onclick="Effect.toggle('search', 'appear'); return false;">
-          Mostrar/ocultar dialogo busqueda</a>
+          <%= t('common-actions.show-hide') %></a>
         <div class="clear"></div>
 
         <%= render :partial => 'shared/footer' %>
