--- a/app/views/places/_list.html.erb
+++ b/app/views/places/_list.html.erb
@@ -1,5 +1,5 @@
 <a href="#" onclick="Effect.toggle('toggle_appear_table_list_places', 'appear'); return false;">
-  Mostrar/ocultar tabla de lugares</a>
+ <%= t('common-actions.show-hide') %></a>
 <div id='toggle_appear_table_list_places' style='background:#eee;' >
   <div>
     <h2><%= @text %></h2>
