- Controller   * added new method to get an excel file
- Partial
  * added a new link to download an excel file

- Routes
  * added new route 'xls_places' to get a xls file

- Lib
  * added new method 'places_report' to help to generate
    the xls for places
  * modify method 'report_of'

--- a/app/views/places/_list.html.erb
+++ b/app/views/places/_list.html.erb
@@ -1,5 +1,6 @@
 <a href="#" onclick="Effect.toggle('toggle_appear_table_list_places', 'appear'); return false;">
  <%= t('common-actions.show-hide') %></a>
+<%= link_to t('common-actions.download'), :controller => 'places', :action => 'xls_places'%>
 <div id='toggle_appear_table_list_places' style='background:#eee;' >
   <div>
     <h2><%= @text %></h2>
