--- a/app/views/places/_render_printers.html.erb
+++ b/app/views/places/_render_printers.html.erb
@@ -1,14 +1,14 @@
-<a href="#" onclick="Effect.toggle('printers', 'appear'); return false;">
-<%= t('common-actions.show-hide') %></a>
-<div id="printers">
-<%= t('phrases.list_of') + ' ' + t('places.printer') %>
-<%= link_to t('common-actions.download'), :controller => 'places', :action => 'xls_printers', :id => params[:id] %>
 <% if not @printers.empty? %>
-<%= render :partial => 'printers/list' %>
+ <a href="#" onclick="Effect.toggle('printers', 'appear'); return false;">
+ <%= t('common-actions.show-hide') %></a>
+ <div id="printers">
+ <%= t('phrases.list_of') + ' ' + t('places.printer') %>
+ <%= link_to t('common-actions.download'), :controller => 'places', :action => 'xls_printers', :id => params[:id] %>
+ <%= render :partial => 'printers/list' %>
+ </div>
 <% else %>
-<%= 'empty' %>
+ <%= t('phrases.list_of') + t('places.printer')+  t('phrases.has') + @printers.count.to_s +  t('phrases.units') %>
 <% end %>
-</div>
 
 <% 2.times do %>
 <br>
