--- a/app/views/places/_list.html.erb
+++ b/app/views/places/_list.html.erb
@@ -4,7 +4,7 @@
 :action => 'xls_places' %>
 <div id='toggle_appear_table_list_places' style='background:#eee;' >
   <div>
-    <h2><%= @text %></h2>
+    <h2><%= t('phrases.list_of') + t('menu.places') %></h2>
     <table>
       <tr>
         <th><%= t('places.name') %></th>
