--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,4 +1,8 @@
-<h2><%= @name_of_place %></h2>
+<h2>
+  <%= @name_of_place %>
+</h2>
+
+<%= link_to t('common-actions.download-all'), :controller => 'places', :action => 'all_hardware', :id => params[:id] %>
 
 <!-- Rendering screens in place -->
 <%= render :partial => 'render_screens', :locals => { :account => @screens } %>
