- Css   * added new classes
- Partials
  * addapted partials for this new classes in css

--- a/app/views/places/_list.html.erb
+++ b/app/views/places/_list.html.erb
@@ -1,7 +1,9 @@
 <a href="#" onclick="Effect.toggle('toggle_appear_table_list_places', 'appear'); return false;">
- <%= t('common-actions.show-hide') %></a>
-<%= link_to t('common-actions.download'), :controller => 'places',
-:action => 'xls_places' %>
+  <%= t('common-actions.show-hide') %></a>
+<div id='left-content' >
+  <%= link_to t('common-actions.download'), :controller => 'places',
+  :action => 'xls_places' %>
+</div>
 <div id='toggle_appear_table_list_places' style='background:#eee;' >
   <div>
     <h2><%= t('phrases.list_of') + t('menu.places') %></h2>
