--- a/app/views/places/_render_computers.html.erb
+++ b/app/views/places/_render_computers.html.erb
@@ -1,8 +1,10 @@
 <% if not @computers.empty? %>
 <a href="#" onclick="Effect.toggle('computers', 'appear'); return false;">
   <%= t('common-actions.show-hide') %></a>
-<div id="computers" >
-  <%= t('phrases.list_of') + ' ' + t('places.computer') %>
+<div id="computers"  style="border: solid 1px #000;">
+  <div id='subtitles' >
+    <%= t('phrases.list_of') + ' ' + t('places.computer') %>
+  </div>
   <div id='left-content' >
     <%= link_to t('common-actions.download'), :controller => 'places', :action => 'xls_computers', :id => params[:id] %>
   </div>
