--- a/app/views/workstations/_list.html.erb
+++ b/app/views/workstations/_list.html.erb
@@ -5,6 +5,7 @@
     <th><%= t 'workstations.screen' %></th>
     <th><%= t 'workstations.printer' %></th>
     <th>Place</th>
+    <th>Modificar</th>
     <th colspan='3'><%= t 'workstations.action' %></th>
   </tr>
   <% for workstation in @workstations %>
@@ -17,6 +18,7 @@
     <td><%= @s rescue nil  %></td>
     <td><%= @p rescue nil  %></td>
     <td><%= @place rescue nil  %></td>
+    <td><%= link_to t('common-actions.edit') , edit_workstation_path(workstation) %></td>
     <td><%= link_to t('common-actions.destroy'), workstation, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
   <% end %>
