--- a/app/views/screens/_form.html.erb
+++ b/app/views/screens/_form.html.erb
@@ -10,8 +10,10 @@
   <%= collection_select 'screen', 'mark_id', Mark.find(:all), 'id', 'name',
       {:prompt => true} %>
 
-  <%= collection_select 'screen', 'place_id', Place.find(:all), 'id', 'title',
+  <% if not @screen.is_part_of_a_workstation %>
+    <%= collection_select 'screen', 'place_id', Place.find(:all), 'id', 'title',
       {:prompt => true} %>
+  <% end %>
   <p>
     <% if action_name == 'new' %>
     <%= f.submit  t('common-actions.create') %>
