--- a/app/views/computers/unavailable.html.erb
+++ b/app/views/computers/unavailable.html.erb
@@ -1,6 +1,12 @@
-<%= render :partial => 'list' %>
+<div id='subtitles' >
+  <%= t('phrases.list_of') + ' ' + t('places.computer') + ' ' + t('computers.unavailable')  %>
+</div>
+<div id='left-content' >
+  <%= render :partial => 'list' %>
+</div>
 
 <%= will_paginate @computers %>
 <br />
 
 <%= link_to t('computers.new'), new_computer_path %>
+
