--- a/app/views/harddisks/_form.html.erb
+++ b/app/views/harddisks/_form.html.erb
@@ -7,11 +7,16 @@
   <%= t('harddisks.sn') %>
   <%= f.text_field :serialnumber %>
 
+  <div id="quarter" >
   <%= collection_select 'harddisk', 'computer_id', Computer.find(:all), 'id', 'name',
       {:prompt => true} %>
+  </div>
 
+  <div id="quarter" >
   <%= collection_select 'harddisk', 'mark_id', Mark.find(:all), 'id', 'name',
       {:prompt => true} %>
+  </div>
+
   <p>
     <% if action_name == 'new' %>
     <%= f.submit  t('common-actions.create') %>
