--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -15,7 +15,7 @@ body,input
 {
     font-family: tahoma, sans-serif;
     font-size: 10pt;
-    color: #777;
+    color: #000;
 }
 
 input.button
@@ -66,10 +66,10 @@ td
 
 select
 {
-    color: #fff;
-    font-size: 10pt;
-    background-color: #666699;
-    border-bottom: solid 1px #336600;
+    color: #000;
+    font-size: 9pt;
+    background-color: #fff;
+    border-bottom: solid 1px #000;
     width: 100%;
 }
 
@@ -365,6 +365,21 @@ table
     float: left;
     width: 25em;
     padding: 1.5em 0em 0em 0em;
+}
+
+#quarter
+{
+    width: 25%;
+}
+
+#half
+{
+    width: 50%;
+}
+
+#third-quarter
+{
+    width: 75%;
 }
 
 /* Footer */
