--- a/app/views/printers/_form.html.erb
+++ b/app/views/printers/_form.html.erb
@@ -9,12 +9,16 @@
   <%= t('printers.sn') %>
   <%= f.text_field :serialnumber %>
 
-  <%= collection_select 'printer', 'mark_id', Mark.find(:all), 'id', 'name',
-      {:prompt => true} %>
+  <div id="quarter" >
+    <%= collection_select 'printer', 'mark_id', Mark.find(:all), 'id', 'name',
+        {:prompt => true} %>
+  </div>
 
   <% if not @printer.is_part_of_a_workstation %>
-   <%= collection_select 'printer', 'place_id', Place.find(:all), 'id', 'title',
-      {:prompt => true} %>
+  <div id="quarter" >
+    <%= collection_select 'printer', 'place_id', Place.find(:all), 'id', 'title',
+        {:prompt => true} %>
+  </div>
   <% end %>
 
   <p>
