- Controllers   * added methods for create xls files
- Views
  * added links to download xls file

- Routes
  * added routes to match xls methods

- Reports
  * little changes

--- a/app/views/printers/index.html.erb
+++ b/app/views/printers/index.html.erb
@@ -1,3 +1,7 @@
+<div id='left-content' >
+  <%= link_to t('common-actions.download-all'), :controller => 'printers', :action => 'xls_printers' %>
+</div>
+
 <%= render :partial => 'list' %>
 
 <br />
