--- a/app/views/screens/index.html.erb
+++ b/app/views/screens/index.html.erb
@@ -1,3 +1,7 @@
+<div id='left-content' >
+  <%= link_to t('common-actions.download-all'), :controller => 'screens', :action => 'xls_screens' %>
+</div>
+
 <%= render :partial => 'list' %>
 
 <br />
