- Controllers   * added report in computers controller   * little changes in printers and screens controllers
- Views
  * added link to download report

- Routes
  * added route to match report method

--- a/app/views/computers/index.html.erb
+++ b/app/views/computers/index.html.erb
@@ -1,3 +1,7 @@
+<div id='left-content' >
+  <%= link_to t('common-actions.download-all'), :controller => 'computers', :action => 'xls_computers' %>
+</div>
+
 <%= render :partial => 'list' %>
 
 <%= will_paginate @computers %>
