--- a/app/views/places/_list.html.erb
+++ b/app/views/places/_list.html.erb
@@ -1,6 +1,6 @@
 <a href="#" onclick="Effect.toggle('toggle_appear_table_list_places', 'appear'); return false;">
   <%= t('common-actions.show-hide') %></a>
-<div id='left-content' >
+<div id='right-content' >
   <%= link_to t('common-actions.download'), :controller => 'places',
   :action => 'xls_places' %>
 </div>
