--- a/app/views/printers/_form.html.erb
+++ b/app/views/printers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= advice( @printer.is_part_of_a_workstation)%>
+<%= advice( @printer.is_part_of_a_workstation, t('help-phrases.in-workstation'))%>
 
 <% form_for(@printer) do |f| %>
   <%= f.error_messages %>
