--- a/app/views/printers/index.html.erb
+++ b/app/views/printers/index.html.erb
@@ -1,4 +1,4 @@
-<div id='left-content' >
+<div id='right-content' >
   <%= link_to t('common-actions.download-all'), :controller => 'printers', :action => 'xls_printers' %>
 </div>
 
