--- a/app/views/computers/index.html.erb
+++ b/app/views/computers/index.html.erb
@@ -1,7 +1,8 @@
-<div id='left-content' >
+<div id='right-content' >
   <%= link_to t('common-actions.download-all'), :controller => 'computers', :action => 'xls_computers' %>
 </div>
 
+<br />
 <%= render :partial => 'list' %>
 
 <%= will_paginate @computers %>
