--- a/app/views/places/_render_computers.html.erb
+++ b/app/views/places/_render_computers.html.erb
@@ -5,7 +5,7 @@
   <div id='subtitles' >
     <%= t('phrases.list_of') + ' ' + t('places.computer') %>
   </div>
-  <div id='left-content' >
+  <div id='right-content' >
     <%= link_to t('common-actions.download'), :controller => 'places', :action => 'xls_computers', :id => params[:id] %>
   </div>
   <%= render :partial => 'computers/list' %>
