--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -83,7 +83,6 @@ table
 {
     color: #000;
     font-size: 9pt;
-    border-bottom: solid 1px #336600;
 }
 
 /* Outer */
@@ -343,9 +342,15 @@ table
     border-bottom: solid 1px #000;
 }
 
-#left-content
+#right-content
 {
     float: right;
+    padding: 0.1em;
+}
+
+#left-content
+{
+    float: left;
     padding: 0.1em;
 }
 
